# clrust

./: .gitignore  Cargo.toml  README.md
examples/: crogger_bench.rs  csv_reader.rs  echo.rs  hello_world.rs  main.rs
src/: action_builder.rs  app.rs  app_identity.rs  app_version.rs  arg.rs  arg_key.rs  arg_parser.rs  argument.rs  argument_parser.rs  build_action.rs  error.rs  lib.rs  logger.rs  parse_error.rs  parsed_arg.rs  terminal.rs  tui.rs
src/log/: emitters.rs  filters.rs  formatters.rs  logger.rs  mod.rs  prelude.rs
tests/: terminal.rs
