[package]
name = "clark"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["lib"]
proc-macro = true

[dependencies]
chrono = "0.4.42"

[dev-dependencies]


[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "csv_reader"
path = "examples/csv_reader.rs"

[[example]]
name = "echo"
path = "examples/echo.rs"
